fix: env variables

--- a/apps/astro-app/src/components/Navbar.astro
+++ b/apps/astro-app/src/components/Navbar.astro
@@ -45,7 +45,7 @@ const menuitems = [
           </MenuItems>
         </Astronav>
         <a
-          href="https://app.ridi.bike/login"
+          href={`${import.meta.env.PUBLIC_RIDI_APP_URL}/login`}
           target="_blank"
           class="px-4 py-2 bg-[#f75835] hover:bg-white rounded-lg text-center text-white hover:text-black border border-black text-xl font-normal leading-7"
         >
