--- a/apps/astro-app/src/components/Features.astro
+++ b/apps/astro-app/src/components/Features.astro
@@ -84,7 +84,7 @@ const features: {
       class="w-full justify-center md:justify-start items-center inline-flex"
     >
       <a
-        href="https://app.ridi.bike"
+        href={import.meta.env.PUBLIC_RIDI_APP_URL}
         target="_blank"
         class="px-8 py-5 bg-[#f75835] hover:bg-white rounded-2xl text-center text-white border-black hover:text-black border text-xl font-normal leading-7"
       >
