--- a/apps/astro-app/src/components/Pricing.astro
+++ b/apps/astro-app/src/components/Pricing.astro
@@ -89,7 +89,7 @@ const prices = [
           ))}
         </ul>
         <a
-          href="https://app.ridi.bike/login"
+          href=`${import.meta.env.PUBLIC_RIDI_APP_URL}/login`
           class="text-black hover:text-white bg-ridiorange hover:bg-black focus:ring-4 focus:ring-primary-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
           >Get started</a
         >
