--- a/apps/astro-app/src/components/Footer.astro
+++ b/apps/astro-app/src/components/Footer.astro
@@ -13,7 +13,7 @@ import Bluesky from "./icons/bluesky.astro";
           <a href="/">
             <img class="w-32" src="/Logo.svg" alt="Ridi logo" />
           </a>
-          <a href="https://github.com/tomsjansons" target="_blank">
+          <a href="https://github.com/ridi-bike" target="_blank">
             <Github class="size-8 fill-ridiorange" />
           </a>
           <a href="https://reddit.com/r/ridiapp" target="_blank">
