--- a/apps/astro-app/src/components/Features.astro
+++ b/apps/astro-app/src/components/Features.astro
@@ -84,11 +84,11 @@ const features: {
       class="w-full justify-center md:justify-start items-center inline-flex"
     >
       <a
-        href={import.meta.env.PUBLIC_RIDI_APP_URL}
+				href="/articles/update-3"
         target="_blank"
         class="px-8 py-5 bg-[#f75835] hover:bg-white rounded-2xl text-center text-white border-black hover:text-black border text-xl font-normal leading-7"
       >
-        Try it now
+			Coming Back Soon
       </a>
     </div>
   </div>
