--- a/apps/astro-app/src/components/Navbar.astro
+++ b/apps/astro-app/src/components/Navbar.astro
@@ -45,11 +45,11 @@ const menuitems = [
           </MenuItems>
         </Astronav>
         <a
-          href={`${import.meta.env.PUBLIC_RIDI_APP_URL}/login`}
+				href="/articles/update-3"
           target="_blank"
           class="px-4 py-2 bg-[#f75835] hover:bg-white rounded-lg text-center text-white hover:text-black border border-black text-xl font-normal leading-7"
         >
-          Open App
+				Coming Back Soon
         </a>
       </header>
     </Container>
