fix: remove check

--- a/apps/astro-app/src/layouts/Layout.astro
+++ b/apps/astro-app/src/layouts/Layout.astro
@@ -18,9 +18,9 @@ const {
   image = "https://ridi.bike/og-image.png",
 } = Astro.props;
 
-if (!import.meta.env.PUBLIC_RIDI_APP_URL) {
-  throw new Error("Missing APP url");
-}
+// if (!import.meta.env.PUBLIC_RIDI_APP_URL) {
+//   throw new Error("Missing APP url");
+// }
 if (!import.meta.env.PUBLIC_RIDI_API_URL) {
   throw new Error("Missing API url");
 }
